kubernetes/apps/ollama/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: ollama
  namespace: apps
spec:
  parentRefs:
    - name: homeserver-gateway
      namespace: infra
  hostnames:
    - "ollama.k8s.local"
  rules:
    - backendRefs:
        - name: ollama
          port: 11434
